// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkAccordion should render correctly 1`] = `
<DocumentFragment>
  <dl
    class="bpk-accordion"
  >
    Accordion child
  </dl>
</DocumentFragment>
`;

exports[`BpkAccordion should render correctly with custom "className" prop 1`] = `
<DocumentFragment>
  <dl
    class="bpk-accordion my-custom-class"
  >
    Accordion child
  </dl>
</DocumentFragment>
`;
